--- a/back/package.json
+++ b/back/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^6.0.0",
+    "mongoose-sequence": "^5.3.1",
     "nodemon": "^2.0.12"
   },
   "devDependencies": {
