--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "ace-builds": "^1.4.12",
-    "json-server": "^0.16.3",
+    "html-react-parser": "^1.2.8",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-ace": "^9.4.1",
@@ -25,8 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 5000"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@types/mathjax": "0.0.37",
+    "@types/react-mathjax": "^1.0.1",
     "@types/react-router-dom": "^5.1.8"
   }
 }
