--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+*
+!*/
+!*.*
 # dependencies
 node_modules/
 .pnp
@@ -17,6 +19,7 @@ build/
 .env.development.local
 .env.test.local
 .env.production.local
+.ccls-cache/
 
 npm-debug.log*
 yarn-debug.log*
