--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "ace-builds": "^1.4.12",
+    "dompurify": "^2.3.1",
     "html-react-parser": "^1.2.8",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dompurify": "^2.2.3",
     "@types/mathjax": "0.0.37",
     "@types/react-router-dom": "^5.1.8"
   }
