--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ coverage/
 
 # production
 build/
+local/
 
 # misc
 .DS_Store
@@ -21,6 +22,8 @@ build/
 .env.production.local
 .ccls-cache/
 .App.tsx.swp
+*.out
+*.in
 
 npm-debug.log*
 yarn-debug.log*
