--- a/back/package.json
+++ b/back/package.json
@@ -17,7 +17,9 @@
     "express-session": "^1.17.2",
     "mongoose": "^6.0.0",
     "mongoose-sequence": "^5.3.1",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "pidusage": "^2.0.21",
+    "queue-fifo": "^0.2.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -25,6 +27,7 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^16.6.2",
+    "@types/pidusage": "^2.0.1",
     "cors": "^2.8.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
